plugins {
    id 'java'
    id 'org.springframework.boot' version '2.7.14-SNAPSHOT'
    id 'io.spring.dependency-management' version '1.0.15.RELEASE'
}

group = 'com.example'
version = '0.0.1-SNAPSHOT'

java {
    sourceCompatibility = '17'
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
    maven { url 'https://repo.spring.io/milestone' }
    maven { url 'https://repo.spring.io/snapshot' }
}

ext {
    set('springCloudVersion', "2021.0.7")
}

dependencies {

    //security
    implementation 'org.springframework.boot:spring-boot-starter-security'

    //jpa
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'

    //validation
    implementation 'org.springframework.boot:spring-boot-starter-validation'

    //web
    implementation 'org.springframework.boot:spring-boot-starter-web'

    //feign client
    implementation 'org.springframework.cloud:spring-cloud-starter-openfeign'

    //lombok
    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'

    //mysql
    runtimeOnly 'com.mysql:mysql-connector-j'

    //json
    implementation 'org.json:json:20230227'

    //firebase
    implementation 'com.google.firebase:firebase-admin:9.1.1'
}

dependencyManagement {
    imports {
        mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
    }
}
